<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Black"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textColor="#ffffff"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

      <Button
            android:id="@+id/button"
            style="@style/ButtonText"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="3"
            android:background="@drawable/btn_white"
            android:clickable="true"
            android:padding="0dp"
             />
        

        <Button
            android:id="@+id/button_del"
            style="@style/ButtonText"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:clickable="true"
            android:onClick="onClickListener_del"
            android:padding="0dp"
            android:text="@string/delete_numbers"
            android:textColor="@color/Red" />
    </LinearLayout>

   

    

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            style="@style/ButtonText"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener7"
            android:text="@string/seven"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            style="@style/ButtonText"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener8"
            android:text="@string/eight"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            style="@style/ButtonText"
            android:layout_weight="1.00"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener9"
            android:text="@string/nine"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            style="@style/ButtonText"
            android:layout_weight="1.00"
            android:background="@drawable/btn_white"
            android:onClick="onClickListenerDivide"
            android:text="@string/div"
            android:textColor="@color/Black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            style="@style/ButtonText"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener4"
            android:text="@string/four"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            style="@style/ButtonText"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener5"
            android:text="@string/five"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/button6"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener6"
            android:text="@string/six"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/buttonMultiply"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:background="@drawable/btn_white"
            android:onClick="onClickListenerMultiply"
            android:text="@string/mul"
            android:textColor="@color/Black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener1"
            android:text="@string/one"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/button2"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener2"
            android:text="@string/two"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/button3"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener3"
            android:text="@string/three"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/buttonMinus"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:background="@drawable/btn_white"
            android:onClick="onClickListenerMinus"
            android:text="@string/min"
            android:textColor="@color/Black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button0"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener0"
            android:text="@string/zero"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/buttonPoint"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListenerPoint"
            android:text="@string/dot"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/buttonEqual"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListenerEqual"
            android:text="@string/equal"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/buttonPlus"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListenerPlus"
            android:text="@string/pl"
            android:textColor="@color/Black"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonOk"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListenerExit"
            android:paddingTop="15dp"
            android:text="@string/ok"
            android:textColor="@color/RoyalBlue"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonReset"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListenerReset"
            android:text="@string/reset"
            android:textColor="@color/RoyalBlue" />
    </LinearLayout>

</LinearLayout>