<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
   android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/txtLabel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <Spinner
        android:id="@+id/spn"
        style="@drawable/button_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/nav_drawer_items"
        android:popupBackground="@color/list_background"
        android:visibility="gone" />

    <Button
        android:id="@+id/Calender"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/Budget"
        android:layout_alignStart="@+id/Budget"
        android:layout_centerVertical="true"
        android:background="@drawable/button_main"
        android:text="@string/cal"
        android:textColor="#000000"
        android:textSize="17sp" />

    <Button
        android:id="@+id/Expense"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/Income"
        android:layout_alignLeft="@+id/Chart"
        android:layout_alignStart="@+id/Chart"
        android:background="@drawable/button_main"
        android:text="@string/expense"
        android:textColor="#000000"
        android:textSize="17sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/Summary"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignBaseline="@+id/Income"
        android:layout_alignBottom="@+id/Income"
        android:layout_alignLeft="@+id/Calender"
        android:layout_alignStart="@+id/Calender"
        android:background="@drawable/button_main"
        android:text="@string/summary"
        android:textColor="#000000"
        android:textSize="17sp" />

    <Button
        android:id="@+id/Income"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/Expense"
        android:layout_alignStart="@+id/Expense"
        android:layout_below="@+id/Calender"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_main"
        android:text="@string/income"
        android:textColor="#000000"
        android:textSize="17sp" />

    <Button
        android:id="@+id/Budget"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/Calender"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:background="@drawable/button_main"
        android:text="@string/budget"
        android:textColor="#000000"
        android:textSize="17sp" />

    <Button
        android:id="@+id/Chart"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignBaseline="@+id/Budget"
        android:layout_alignBottom="@+id/Budget"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/button_main"
        android:text="@string/chart"
        android:textColor="#000000"
        android:textSize="17sp" />

</RelativeLayout>