<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </RelativeLayout>

    <Button
        android:id="@+id/btnok"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/btnCncl"
        android:layout_alignBottom="@+id/btnCncl"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_other"
        android:text="@string/ok"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btnCncl"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp"
        android:background="@drawable/button_other"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/txtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="28dp"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/editname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtname"
        android:ems="10"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/txtdes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editname"
        android:layout_marginTop="22dp"
        android:text="@string/desc"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/editdes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtdes"
        android:ems="10"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/txtbal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/init"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/editbal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtbal"
        android:ems="10"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textSize="17sp" >

        <requestFocus />
    </EditText>

</RelativeLayout>